# src/routes/authRoutes.ts
@@ -1,0 +1,10 @@
+import { Router } from 'express';
+import AuthController from '../controllers/AuthController';
+
+const router = Router();
+
+router.post('/register', AuthController.register);
+router.post('/login', AuthController.login);
+router.post('/google', AuthController.googleLogin);
+
+export default router;
