# src/routes/noteRoutes.ts
@@ -1,7 +1,11 @@
 import { Router } from 'express';
 import NoteController from '../controllers/NoteController';
+import { authMiddleware } from '../middlewares/authMiddleware';
 
 const router = Router();
+
+// Todas as rotas de notas agora exigem autenticação
+router.use(authMiddleware);
 
 router.get('/', NoteController.getAll);
 router.get('/:id', NoteController.getById);
